[Feature]: Feature rewrite and new available features (#741)
* * Changed the Feature format

* * First iteration of functional handlers and Features

* * Made the FireHandler also affect blocks

* * Reimplemented the feature writer to create tooltips from basePredicateFeatures

* * Added an indentation to the feature if they are written with titles

* * Added support for multiple lines of descriptions in features

* * Re-implemented the block effectiveness handler

* * Fixed some invalid names from the docs

* * Fixed more invalid names

* * Added MultiHandlers

* * Added Particle and sound handlers

* * Used attributes to affect handler values.

* * Made it possible to use attributes to influence feature values.
* Migrated several value based features to attributes
* Changed name of AttributeV2 to ComputedAttribute

* * Fixed predicate implementation for base features
* Added Column, Radius and Pattern block selectors
* Added block filters for selectors
* Tweaked previous BlockBreakHandler to work with the new feature

* * Implemented basic filters for vein mining as well

* * Fixed block breaking features
* Added column, pattern and radius as allowed selectors
* Added block filters: can_mine, similar_blocks and same_block
* Added can_mine as a normal predicate
* Refactored vein mining schematics to new format
* Added the ModifiableFeatureAttribute for easy mutable attributes

* * Enabled pattern selector to specify direction as well

* * Documented the PatternSelector

* * Added a section about the modifier

* * Implemented multiple speed calculation handlers

* * Fixed block breaking rendering
* Created the attribute cache and the feature cache
* Fixed all leftover handlers
* Fixed a ton of issues with the block breaking feature
* Added tool block handler caching for invalid scenarios as well

* * Fixed descriptions and setup for most schematics
* Fixed magnetic gem
* Fixed Undying totem
* Created a gener