@@ -1,16 +1,26 @@
 package com.sigmundgranaas.forgero.minecraft.common.toolhandler.block;
 
-import java.util.Collections;
-import java.util.Optional;
-import java.util.Set;
-import java.util.function.Consumer;
-
+import com.google.common.cache.Cache;
+import com.google.common.cache.CacheBuilder;
+import com.google.common.collect.ImmutableSet;
 import com.sigmundgranaas.forgero.core.property.PropertyContainer;
 import com.sigmundgranaas.forgero.core.property.v2.cache.CacheAbleKey;
-
+import com.sigmundgranaas.forgero.core.property.v2.cache.FeatureCache;
+import com.sigmundgranaas.forgero.core.property.v2.cache.FeatureContainerKey;
+import com.sigmundgranaas.forgero.core.util.match.MatchContext;
+import com.sigmundgranaas.forgero.core.util.match.Matchable;
+import com.sigmundgranaas.forgero.minecraft.common.feature.BlockBreakFeature;
+import lombok.Getter;
+import lombok.experimental.Accessors;
 import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.item.ItemStack;
 import net.minecraft.util.math.BlockPos;
-import net.minecraft.world.BlockView;
+import net.minecraft.util.math.Direction;
+
+import java.util.*;
+import java.util.function.Consumer;
+
+import static com.sigmundgranaas.forgero.minecraft.common.match.MinecraftContextKeys.*;
 
 /**
  * A handler for a block that is being mined.
@@ -18,15 +28,18 @@ import net.minecraft.world.BlockView;
  * Prefer cached handlers from {@link BlockHandlerCache} over creating new ones.
  * Calculating the blocks to mine is expensive, and should only be done once per block unless it is invalidated.
  * Caching is extremely short term, and should only be for actions that calls the handler multiple times in a row, like when calculating brok breaking deltas.
- * See {@link BlockHandlerFactory} for creating handlers from tools.
+ * See {@link BlockHandlerHelper} for creating handlers from tools.
  */
+@Getter
+@Accessors(fluent = true)
 public class ToolBlockHandler {
-	public static ToolBlockHandler EMPTY = new ToolBlockHandler(new BlockPos(0, 0, 0), Collections.emptySet(), 0f, CacheAbleKey.EMPTY);
-	public static String BLOCK_BREAKING_PATTERN_KEY = "BLOCK_BREAKING_PATTERN";
-	public static String VEIN_MINING_KEY = "VEIN_MINING";
-	public static String COLUMN_MINING_KEY = "COLUMN_MINING";
+	private static final Cache<CacheAbleKey, ToolBlockHandler> blockHandlerCache = CacheBuilder.newBuilder()
+			.maximumSize(10)
+			.softValues()
+			.build();
+	private static final Map<CacheAbleKey, Boolean> canMineCache = new HashMap<>();
 
-	public static Set<String> BLOCK_BREAKING_KEYS = Set.of(BLOCK_BREAKING_PATTERN_KEY, VEIN_MINING_KEY, COLUMN_MINING_KEY);
+	public static ToolBlockHandler EMPTY = new ToolBlockHandler(new BlockPos(0, 0, 0), Collections.emptySet(), 0f, CacheAbleKey.EMPTY);
 
 	private final Set<BlockPos> availableBlocks;
 	private final BlockPos originPos;
@@ -35,21 +48,44 @@ public class ToolBlockHandler {
 
 	public ToolBlockHandler(BlockPos originPos, Set<BlockPos> blocks, float hardness, CacheAbleKey key) {
 		this.key = key;
-		this.availableBlocks = blocks;
+		this.availableBlocks = new HashSet<>(blocks);
 		this.originPos = originPos;
 		this.hardness = hardness;
 	}
 
-	public static Optional<ToolBlockHandler> of(PropertyContainer container, BlockView world, BlockPos pos, PlayerEntity player) {
-		return BlockHandlerFactory.create(container, world, pos, player);
-	}
+	public static Optional<ToolBlockHandler> of(PropertyContainer container, BlockPos pos, PlayerEntity player) {
+		FeatureContainerKey featureKey = FeatureContainerKey.of(container, BlockBreakFeature.KEY);
+		CacheAbleKey cacheKey = new Key(player.getMainHandStack(), pos, Direction.getEntityFacingOrder(player)[0]);
+		if (!FeatureCache.check(featureKey) || (canMineCache.containsKey(cacheKey) && !canMineCache.get(cacheKey))) {
+			return Optional.empty();
+		}
 
-	public Set<BlockPos> getAvailableBlocks() {
-		return availableBlocks;
-	}
+		ToolBlockHandler cachedHandler = blockHandlerCache.getIfPresent(cacheKey);
 
-	public float getHardness() {
-		return hardness;
+		if (cachedHandler != null) {
+			return Optional.of(cachedHandler);
+		}
+
+		MatchContext ctx = MatchContext.of()
+				.put(WORLD, player.getWorld())
+				.put(ENTITY, player)
+				.put(BLOCK_TARGET, pos);
+
+
+		var featureOpt = container.stream()
+				.features(BlockBreakFeature.KEY)
+				.filter(feature -> feature.test(Matchable.DEFAULT_TRUE, ctx))
+				.findFirst();
+
+		if (featureOpt.isPresent()) {
+			Set<BlockPos> selected = ImmutableSet.copyOf(featureOpt.get().selectBlocks(player, pos));
+			var handler = new ToolBlockHandler(pos, selected, featureOpt.get().calculateBlockBreakingDelta(player, pos, selected), cacheKey);
+			blockHandlerCache.put(cacheKey, handler);
+			return Optional.of(handler);
+		} else {
+			canMineCache.put(cacheKey, false);
+		}
+		return Optional.empty();
 	}
 
 	/**
@@ -59,9 +95,12 @@ public class ToolBlockHandler {
 	 * @return the handler for chaining.
 	 */
 	public ToolBlockHandler handle(Consumer<BlockPos> consumer) {
-		availableBlocks.forEach(consumer);
+		for (BlockPos blockPos : availableBlocks) {
+			consumer.accept(blockPos);
+		}
 		return this;
 	}
+
 
 	/**
 	 * Runs an action for every block in the handler except the origin block.
@@ -71,7 +110,11 @@ public class ToolBlockHandler {
 	 * @return the handler for chaining.
 	 */
 	public ToolBlockHandler handleExceptOrigin(Consumer<BlockPos> consumer) {
-		availableBlocks.stream().filter(info -> !info.equals(originPos)).forEach(consumer);
+		for (BlockPos blockPos : availableBlocks) {
+			if (!blockPos.equals(originPos)) {
+				consumer.accept(blockPos);
+			}
+		}
 		return this;
 	}
 
@@ -81,12 +124,28 @@ public class ToolBlockHandler {
 	 */
 	public void cleanUp() {
 		BlockHandlerCache.remove(key);
+		canMineCache.clear();
 	}
 
-	public record BlockInfo(BlockPos pos) implements CacheAbleKey {
+
+	public record Key(ItemStack stack, BlockPos pos, Direction direction) implements CacheAbleKey {
+
 		@Override
 		public String key() {
-			return pos.asLong() + "";
+			return stack.hashCode() + ":" + pos.asLong() + ":" + direction.toString();
+		}
+
+		@Override
+		public boolean equals(Object o) {
+			if (this == o) return true;
+			if (o == null || getClass() != o.getClass()) return false;
+			Key key = (Key) o;
+			return key().equals(key.key());
+		}
+
+		@Override
+		public int hashCode() {
+			return Objects.hash(key());
 		}
 	}
 }
